--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-    background-image: url(https://files.oaiusercontent.com/file-Amc1VvEtwcpGzbmC4Uq2SW?se=2024-12-26T12%3A27%3A33Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3D28e91064-120e-407e-bc1e-ad3bbdea09ac.webp&sig=LQ0WOYidiRvxMfz8ExmfR%2BexSdliZH3rWndm7nP0LD8%3D);
+    background-image: url(https://media.istockphoto.com/id/1420958824/photo/user-sign-iconic-background-sunray-realistic-look-symbol-for-social.webp?a=1&b=1&s=612x612&w=0&k=20&c=-_O6o4g2UAQqt5WZqEb4vxM2KiZPmTDkIuuBb2HGO1M=);
     background-size: cover;
     background-repeat: no-repeat;
     display: flex;
